--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<p>Lorem ipsum dolor sit amet,  consectetuer adipiscing elit, sed </p>
 					</div>
 					<div class="col-12 col-md-6 col-lg-3 crayon-wrap">
-						<div class="services-img"><span class="span"></span><img class="crayon"src="img/services/1.png" alt=""></div>
+						<div class="services-img"><span class="span"></span><img class="crayon" src="img/services/1.png" alt=""></div>
 						<h3>Design</h3>
 						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
 					</div>
@@ -153,9 +153,10 @@
 
 
 					</div>
-			</div>
+				</div>
 
-		</div>		
+			</div>
+		</div>	
 	</section>
 
 	<div class="section-slider">
@@ -184,10 +185,10 @@
 							<span>CEO / Marketing Guru</span>
 						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb icon.png" alt="Facebook"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter icon.png" alt="Twitter"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn icon.png" alt="LinkedIn"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail icon.png" alt="Mail"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb-icon.png" alt="Facebook"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter-icon.png" alt="Twitter"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-icon.png" alt="LinkedIn"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 					<div class="slider-item">
 						<div class="slider-img slider-img-2"><img src="" alt=""></div>
@@ -195,32 +196,32 @@
 							<span>CEO / Marketing Guru</span>
 						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb icon.png" alt="Facebook"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter icon.png" alt="Twitter"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn icon.png" alt="LinkedIn"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail icon.png" alt="Mail"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb-icon.png" alt="Facebook"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter-icon.png" alt="Twitter"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-icon.png" alt="LinkedIn"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 					<div class="slider-item">
-						<div class="slider-img slider-img-3"><img src="" alt=""></div>
+						<div class="slider-img slider-img-3"></div>
 						<h3>ANNE HATHAWAY <br>
 							<span>CEO / Marketing Guru</span>
 						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb icon.png" alt="Facebook"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter icon.png" alt="Twitter"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn icon.png" alt="LinkedIn"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail icon.png" alt="Mail"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb-icon.png" alt="Facebook"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter-icon.png" alt="Twitter"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-con.png" alt="LinkedIn"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 					<div class="slider-item" aria-hidden="false">
-						<div class="slider-img slider-img-4"><img src="" alt=""></div>
+						<div class="slider-img slider-img-4"></div>
 						<h3>ANNE HATHAWAY <br>
 							<span>CEO / Marketing Guru</span>
 						</h3>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb icon.png" alt="Facebook"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter icon.png" alt="Twitter"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn icon.png" alt="LinkedIn"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail icon.png" alt="Mail"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb-icon.png" alt="Facebook"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter-icon.png" alt="Twitter"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-icon.png" alt="LinkedIn"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 				</div>
 
@@ -432,7 +433,7 @@
 	
 	<script src="libs/jquery/dist/jquery.min.js"></script>
 	<script src="js/scripts.min.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script>
 
 		$(".tab_item").not(":first").hide();
