--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				
 				<div class="slider text-center">
 					<div class="slider-item">
-						<div class="slider-img slider-img-1"><img src="" alt=""></div>
+						<div class="slider-img slider-img-1"></div>
 						<h3>ANNE HATHAWAY <br>
 							<span>CEO / Marketing Guru</span>
 						</h3>
@@ -191,7 +191,7 @@
 						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 					<div class="slider-item">
-						<div class="slider-img slider-img-2"><img src="" alt=""></div>
+						<div class="slider-img slider-img-2"></div>
 						<h3>ANNE HATHAWAY <br>
 							<span>CEO / Marketing Guru</span>
 						</h3>
