--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
 						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Fb-icon.png" alt="Facebook"></a>
 						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Twitter-icon.png" alt="Twitter"></a>
-						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-con.png" alt="LinkedIn"></a>
+						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/LinkedIn-icon.png" alt="LinkedIn"></a>
 						<a href="https://vk.com/wtchcrft99 "><img src="img/icon/Mail-icon.png" alt="Mail"></a>
 					</div>
 					<div class="slider-item" aria-hidden="false">
